# g25-automation

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
engine/: inspector.py  local_server.py  playwright_runner.py  result_parser.py  setup.py  vahaduo_bridge.py
interpretation/: __init__.py  evidence_pack.py  interpreter.py  phase4.py
interpretation_profiles/: eastmed_europe.yaml  jewish_eastmed_europe.yaml  levant_anatolia_balkan_mediterranean_europe.yaml  minimal.yaml  northwest_europe.yaml
optimizer/: aggregation.py  interpretation.py  iteration_manager.py  panel_mutation.py  plausibility.py  preselection.py  scoring.py  seed_strategy.py
orchestration/: pipeline.py  user_layout.py  user_profile.py
preprocessing/: candidate_reducer.py  date_extractor.py  deduplicate_candidates.py  loader.py  normalize_names.py  outlier_filter.py  panel_builder.py  region_filter.py  sample_metadata.py  split_by_period.py
report/: CLAUDE.md  __init__.py  assets.py  make_report.py  sample_enrichment.py  templates.py  theme.py  translations.py
scripts/: bootstrap.py  cli.py  make_report.py  pipeline_validation.py
tests/: test_aggregation.py  test_deduplication.py  test_dual_mode.py  test_final_report_append.py  test_full_run_cli.py  test_interpretation.py  test_interpreter.py  test_loader.py  test_make_report.py  test_optimizer.py  test_parser.py  test_period_diagnostics.py  test_phase4.py  test_preprocessing.py  test_preselection.py  test_profile_cli.py  test_user_layout.py  test_user_metadata_propagation.py  test_user_profile.py
(+4 files in other folders)
